--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     ext.lifecycle_version = '2.0.0'
+    ext.retrofit_version = '2.6.0'
+    ext.dagger2_version = '2.23.1'
 
     repositories {
         google()
